--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -34,7 +34,7 @@ nav{
     top: 100%;
 
     &.active{
-      max-height: 100vh;
+      max-height: 50vh;
     }
   }
 
